--- a/src/index.html
+++ b/src/index.html
@@ -5,17 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homework 12</title>
-    <script src="./index.js"></script>
+
     <link rel="stylesheet" href="./css/common.css">
   </head>
 
   <body>
     <a href="https://malk0v.github.io/index/#work">На главную</a>
 
-    <ul>
-      <li><a href="./partials/news.html">News</a></li>
-    </ul>
+  <!-- ================= news ================= -->
 
-    <script src="./js/news.js" type="module"></script>
+    <!-- <ul>
+      <li><a href="./partials/news.html">News</a></li>
+    </ul> -->
+
+    <!-- <script src="./js/news.js" type="module"></script> -->
+
+
+  <!-- ================== практика ================= -->
+
+
+  <h1>news web-site</h1>
+
+  <ul class="c"></ul>
+
+  <script src="./index.js"></script>
   </body>
 </html>
