--- a/src/index.html
+++ b/src/index.html
@@ -5,27 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homework 12</title>
-    <link rel="stylesheet" href="./css/common.css">
+    <link rel="stylesheet" href="./sass/common.scss">
   </head>
 
   <body>
     <a href="https://malk0v.github.io/index/#work">На главную</a>
 
-  <!-- ================= news ================= -->
 
-    <!-- <ul>
-      <li><a href="./partials/news.html">News</a></li>
-    </ul> -->
+<div class="div-a-center">
+    <h1>Новостной сайт</h1>
 
-    <!-- <script src="./js/news.js" type="module"></script> -->
+<input type="text" class="input-js" placeholder="'Изюм'">
 
-
-  <!-- ================== практика ================= -->
-  <h1>news web-site</h1>
-
-<input type="text" class="input-js">
-
-<button class="start-js">search</button>
+<button class="start-js">Поиск</button>
+</div>
 
   <ul class="c"></ul>
 
