--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homework 12</title>
-    <link rel="stylesheet" href="./sass/common.scss">
+    <link rel="stylesheet" href="./sass/main.scss">
   </head>
 
   <body>
@@ -13,14 +13,19 @@
 
 
 <div class="div-a-center">
-    <h1>Новостной сайт</h1>
+  <h1>Новостной сайт</h1>
 
-<input type="text" class="input-js" placeholder="'Изюм'">
+  <input type="text" class="input-js" placeholder="'Изюм'">
 
-<button class="start-js">Поиск</button>
+  <button class="start-js">Поиск</button>
+
 </div>
 
+<div class="div-a-center">
   <ul class="c"></ul>
+</div>
+
+
 
   <script src="./index.js"></script>
   </body>
