--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework 12</title>
+    <title>Новости</title>
     <link rel="stylesheet" href="./sass/main.scss">
   </head>
 
   <body>
     <a href="https://malk0v.github.io/index/#work">На главную</a>
-
 
 <div class="div-a-center">
   <h1>Новостной сайт</h1>
@@ -24,8 +23,6 @@
 <div class="div-a-center">
   <ul class="c"></ul>
 </div>
-
-
 
   <script src="./index.js"></script>
   </body>
